--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 
 section ul {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 20%;
+    left: 10%;
     transform: translate(-50%, -50%);
     margin: 0;
     padding: 0;
@@ -21,9 +21,9 @@ section ul li a {
     position: relative;
     text-transform: uppercase;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2rem;
     text-decoration: none;
-    display: block;
+    /* display: block; */
     color: #fff;
 }
 
@@ -33,4 +33,8 @@ section ul:hover li {
 
 section ul li:hover {
     opacity: 1.0;
+}
+
+section ul li:hover a {
+    color: gold;
 }
